--- a/ServletDemo/pom.xml
+++ b/ServletDemo/pom.xml
@@ -32,11 +32,13 @@
             <version>1.9.1</version>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>taglibs</groupId>-->
-        <!--            <artifactId>standard</artifactId>-->
-        <!--            <version>1.1.2</version>-->
-        <!--        </dependency>-->
+        <!--
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        -->
     </dependencies>
 
     <build>
